# gpx-weather

./: README.md  pyproject.toml  requirements.txt
assets/gpx/: ALC_2024_Day_1_-_San_Francisco_-_Santa_Cruz.gpx  ALC_2024_Day_2_-_Santa_Cruz_-_King_City_CA.gpx  ALC_2024_Day_3_-_King_City_-_Paso_Robles.gpx  ALC_2024_Day_4_-_Paso_Robles_to_Santa_Maria.gpx  ALC_2024_Day_5_-_Santa_Maria_-_Lompoc.gpx  ALC_2024_Day_6_-_Lompoc_-_Ventura_CA.gpx  ALC_2024_Day_7_-_Ventura_-_Santa_Monica.gpx
src/: gpx.py  hrrr.py  main.py
