[project]
name = "gpx-weather"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dask==2025.5.0",
    "geopandas==1.0.1",
    "geopy==2.4.1",
    "gpx==0.2.1",
    "h5netcdf==1.6.1",
    "jupyter",
    "netCDF4==1.7.2",
    "numpy==2.2.6",
    "pandas==2.2.3",
    "s3fs==2025.3.2",
    "xarray==2025.4.0",
    "zarr==3.0.7",
]

